@@ -3829,7 +3829,7 @@ define(['app', 'livesocket'], function (app) {
 			}).selectmenu('refresh');
 
 			if ($scope.config.AllowWidgetOrdering == true) {
-				if (permissions.hasPermission("Admin")) {
+				if (permissions.hasPermission("User")) {
 					if (window.myglobals.ismobileint == false) {
 						$element.find(".movable").draggable({
 							drag: function () {
